--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -324,7 +324,9 @@
   {% set header_subtitle = 'Intelligent Radiology Orchestration' %}
   {% set header_mode = 'global' %}
   {% set active_page = 'timetable' %}
+  {% set header_nav = namespace(links=[]) %}
   {% include 'partials/header_links.html' %}
+  {% set header_links = header_nav.links %}
   {% include 'partials/header.html' %}
 
   <!-- Modality Filter Bar -->
