--- a/templates/index.html
+++ b/templates/index.html
@@ -458,7 +458,7 @@
       return div.innerHTML;
     }
 
-    // Button visibility is now controlled by config only (always_visible + valid_skills)
+    // Button visibility is now controlled by config only (valid_skills)
     // No dynamic hiding based on worker availability
 
     function getNextAssignment(skillSlug, skillLabel, forcePrimary = false) {
