Align edit modal with save/exit workflow

--- a/templates/prep_next_day.html
+++ b/templates/prep_next_day.html
@@ -1470,6 +1470,7 @@
       <h3 id="modal-title">Edit Worker</h3>
       <div id="modal-content"></div>
       <div class="modal-actions">
+        <button class="btn btn-secondary" id="modal-edit-toggle" onclick="toggleModalEditMode()">Edit Mode</button>
         <button class="btn btn-secondary" onclick="closeModal()">Close</button>
         <button class="btn btn-success" id="modal-save-button" style="display: none;" onclick="saveModalAction()">Add Worker</button>
       </div>
