--- a/templates/index.html
+++ b/templates/index.html
@@ -139,6 +139,12 @@
       margin: 0.5rem 0;
     }
 
+    .assigned-context {
+      font-size: 1.2rem;
+      color: #666;
+      margin-bottom: 0.25rem;
+    }
+
     .timer {
       color: #666;
       font-size: 1rem;
@@ -497,6 +503,7 @@
       resultDiv.innerHTML = `
         <div class="result-panel">
           <div class="assigned-person">${escapedPerson}</div>
+          <div class="assigned-context">${escapeHtml(skill || lastSkillUsed)}</div>
           <div class="timer" id="timer"></div>
         </div>
       `;
